--- a/src/utils/Cards/AddRestaurantFormCard/AddRestaurantFormCard.module.css
+++ b/src/utils/Cards/AddRestaurantFormCard/AddRestaurantFormCard.module.css
@@ -55,3 +55,11 @@
 ::placeholder{
     color: var(--color-p1-text);
 }
+
+@media all and (max-width: 640px) {
+.outerDiv {
+    /* margin-bottom: 20rem; */
+
+}
+
+}
