--- a/src/components/AddRestaurantComponents/HowItWorks/HowItWorks.module.css
+++ b/src/components/AddRestaurantComponents/HowItWorks/HowItWorks.module.css
@@ -1,6 +1,6 @@
 .outerDiv {
     width: 100%;
-    height: 400px;
+    height: 450px;
     margin: 1rem 0 10rem 0;
 }
 
@@ -74,6 +74,9 @@
     }
 
     .outerDiv {
-        margin: 1rem 0 20rem 0;
+        margin: 1rem 0 2rem 0;
+        width: 100%;
+        height: 80rem;
     }
+
 }
