--- a/src/components/Navbars/AddRestaurantMobileNavbar/AddRestaurantMobileNavbar.module.css
+++ b/src/components/Navbars/AddRestaurantMobileNavbar/AddRestaurantMobileNavbar.module.css
@@ -1,16 +1,22 @@
-.navbarH{
+.menu {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 10px;
+  
+}
+
+.menuItemLinkTxt{
+    text-decoration: none;
+    color: black;
+    margin-bottom: 10px;
+}
+.navbar{
     height: 100vh;
     position: sticky;
     top:0;
     background-color: var(--bg-white);
-    z-index: 100;
-}
-
-.menu {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
+    z-index: 1;
 }
 
 .title {
@@ -18,14 +24,14 @@
     font-size: 2.5rem;
     font-weight: 700;
     text-decoration: none;
-    color: var(--color-title-text);
+    color: var(--color-title-text)
 }
 
 .menuBar {
     width: 20px;
     height: 20px;
     display: none;
-    margin: 20px;
+    margin: 0px 20px;
     cursor: pointer;
 }
 
@@ -34,62 +40,29 @@
 }
 
 .menuItem {
-    display: none;
+    display: flex;
+
 }
 
-.profile {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.modals{
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
 }
 
 .profilePic {
-    width: 35px;
-    height: 35px;
     border-radius: 50%;
-}
-
-.profileName {
-    margin: 0px 10px;
-}
-
-.downArrow {
-    width: 20px;
-    height: 20px;
-}
-
-.rightArrow {
-    width: 15px;
-    height: 15px;
-}
-
-.optionsBox {
-    margin-top: 1.5rem;
-}
-
-.options {
-    display: flex;
-    justify-content: space-between;
-    margin: 10px 30px;
-    font-size: 0.9rem;
-    text-decoration: none;
-    color: var(--color-text);
-    font-weight: 450;
-}
-
-.dnone {
-    display: none;
+    width: 50px;
+    display: inline-block;
+    
 }
 
 @media all and (max-width: 480px) {
     .navbar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 100%;
-        margin-top: 1.5rem;
-        padding: 0 20px;
+        display: block;
+        width: 100%;
+        height: 100vh;
+        margin-top: 3rem;
     }
 
     .menuItem {
@@ -97,6 +70,7 @@
         font-weight: 400;
         display: flex;
         justify-content: space-between;
+        gap: 6rem;
         text-decoration: none;
         margin: 1rem;
         font-size: 1.1rem;
