--- a/src/components/Navbars/MobileNavbar/MobileNavbar.module.css
+++ b/src/components/Navbars/MobileNavbar/MobileNavbar.module.css
@@ -2,9 +2,16 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-left: 10px;
+  
 }
 
-.mobileMenu{
+.menuItemLinkTxt{
+    text-decoration: none;
+    color: black;
+    margin-bottom: 10px;
+}
+.navbar{
     height: 100vh;
     position: sticky;
     top:0;
@@ -24,7 +31,7 @@
     width: 20px;
     height: 20px;
     display: none;
-    margin: 20px;
+    margin: 0px 20px;
     cursor: pointer;
 }
 
@@ -33,7 +40,8 @@
 }
 
 .menuItem {
-    display: none;
+    display: flex;
+
 }
 
 .modals{
@@ -42,18 +50,27 @@
     overflow-y: scroll;
 }
 
+.profilePic {
+    border-radius: 50%;
+    width: 50px;
+    display: inline-block;
+    
+}
+
 @media all and (max-width: 480px) {
     .navbar {
         display: block;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         margin-top: 3rem;
     }
 
     .menuItem {
         color: var(--color-black);
         font-weight: 400;
-        display: block;
+        display: flex;
+        justify-content: space-between;
+        gap: 6rem;
         text-decoration: none;
         margin: 1rem;
         font-size: 1.1rem;
