--- a/src/utils/UserProfileUtils/UserHero/UserHero.module.css
+++ b/src/utils/UserProfileUtils/UserHero/UserHero.module.css
@@ -80,8 +80,8 @@
 }
 
 .editBtn{
-    width: 120px;
-    height: 25px;
+    /* width: 120px;
+    height: 25px; */
     display: flex;
     justify-content: center;
     align-items: center;
